# PQuantum

./: CMakeLists.txt  config.cmake
examples/: qed.json
src/: CMakeLists.txt  main.cpp
src/calculation/: CMakeLists.txt  beta_function.hpp  beta_functions_wetterich.cpp  calculation.hpp  expand_in_field_degrees.cpp  field_derivative.cpp  field_polynomial.hpp  flatten_arithmetic.cpp  lagrangian_derivative.cpp  lagrangian_derivative.hpp  lagrangian_expansion.cpp  lagrangian_manipulations.hpp  lagrangian_polynomial.hpp  map_fields.cpp  maximum_field_degree.cpp  reindex_internal_indices.cpp  resolve_derivatives.cpp  simplify_arithmetic.cpp  zero_fields.cpp
src/calculation/wetterich/: beta_functions.cpp  trace_terms_of_degrees.cpp  wetterich_equation.hpp
src/cxxmath/: cxxmath.hpp
src/error/: CMakeLists.txt  control.cpp  control.hpp  error.cpp  error.hpp
src/io/: CMakeLists.txt  logging.cpp  logging.hpp  math_parser.cpp  math_parser.hpp  program_options_handler.cpp  program_options_handler.hpp  qft_json_header.hpp  qft_json_parser.cpp  qft_json_parser.hpp  string_to_uuid.cpp  string_to_uuid.hpp
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
src/mathutils/: CMakeLists.txt  arithmetic.hpp  atom.hpp  atom_indices.hpp  clifford.hpp  derivative.hpp  expression_node.hpp  expressions.hpp  free_polynomial.hpp  function_call.hpp  index_sum.hpp  linear_operators.hpp  manifold_specification.cpp  manifold_specification.hpp  multiplication_and_convolution.hpp  number.cpp  number.hpp  spacetime_index.hpp  string_atom.hpp  variable.hpp
src/model/: CMakeLists.txt  classical_field.hpp  lagrangian.hpp  lagrangian_derivative.hpp  model_specification.cpp  model_specification.hpp  parameter.hpp  qft_json_parser.cpp  qft_json_parser.hpp  spacetime_index.hpp
src/parsing/: CMakeLists.txt  bison_types.cmake  bison_types.hpp  config.cmake  instantiations.hpp  lazy_instantiations.hpp  lazy_types.hpp  math_error.cpp  math_parse.y  math_parser.y  math_scanner.cmake  math_scanner.cpp  math_scanner.hpp  math_to_lagrangian.cpp  math_to_lagrangian.hpp  math_types.hpp  parse.hpp  parse_arithmetic_core.cpp  parse_math.cpp  parse_math.hpp  parse_tree.hpp  parsing.cmake  parsing.cpp  parsing.hpp  parsing_impl.hpp  qft_json_header.hpp  qft_json_parser.cpp  qft_json_parser.hpp  qft_parsing_context.hpp  scanner_state.hpp  string_parsing.cpp  string_parsing.hpp  tree_helpers.hpp  tree_types.hpp  type_rule.hpp  x3_helpers.hpp
src/parsing/parser_rules/: arithmetic.hpp  free_r_algebra.hpp  lagrangian.hpp  lagrangian_data.hpp  lazy.hpp  node_rule_for_fwd.hpp  number.hpp  polynomial_expression.hpp  rule_for_fwd.hpp  std_variant.hpp  std_vector.hpp  string_id.hpp
src/parsing/tree_rules/: child.hpp  lagrangian.hpp  linear_operators.hpp  tree_node.hpp
src/parsing/type_rules/: arithmetic.hpp  arithmetic_core.hpp  difference.cpp  field.hpp  gamma_matrix.hpp  identifier.cpp  identifier.hpp  indices.hpp  linear_operators.hpp  number.hpp  parameter.hpp  parentheses.cpp  product.cpp  quotient.cpp  spacetime_indices.hpp  string_id.hpp  sum.cpp  variant.hpp
src/pquantum/: CMakeLists.txt  calculation_controller.cpp  calculation_controller.hpp  main.cpp  program_options_handler.cpp  program_options_handler.hpp
src/support/: bool_v.hpp  is_member.hpp  (+9 more)
test/: CMakeLists.txt
test/tag_dispatch/: CMakeLists.txt  bool.cpp  clifford.cpp  free_monomial.cpp  free_polynomial.cpp  int.cpp  tag_dispatch.cpp
(+99 files in other folders)
